Fix HTML structure and update fact list

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </aside>
 
         <section>
-          <ul>
+          <ul class="facts-list">
             <li class="fact">
               <p>
-                React is being developed by Meta (formerly facebook)
+                React is being developed my Meta
                 <a
                   class="source"
                   href="https://opensource.fb.com/"
